--- a/OneDrive/Desktop/Project2/style.css
+++ b/OneDrive/Desktop/Project2/style.css
@@ -231,7 +231,7 @@
         .data-table {
             width: 100%;
             border-collapse: collapse;
-            border: 3px solid #ffa500;
+            border: 1px solid #ffa500;
             background-color: black;
         }
 
@@ -242,7 +242,7 @@
             text-align: left;
             font-weight: 600;
             font-size: 18px;
-            border: 2px solid #ffa500;
+            border: 1px solid #ffa500;
         }
 
         .data-table td {
@@ -250,8 +250,8 @@
             font-size: 16px;
             color: #ffa500;
             background-color: black;
-            border-left: 2px solid #ffa500;
-            border-right: 2px solid #ffa500;
+            border-left: 1px solid #ffa500;
+            border-right: 1px solid #ffa500;
             border-top: none;
             border-bottom: none;
         }
@@ -268,7 +268,7 @@
             background: linear-gradient(90deg, #ffa500, #ffb84d);
             color: #1a1a1a;
             font-weight: 600;
-            border: 2px solid #ffa500;
+            border: 1px solid black;
         }
 
         
