--- a/OneDrive/Desktop/Project2/style.css
+++ b/OneDrive/Desktop/Project2/style.css
@@ -192,7 +192,8 @@
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
-            justify-self: center;
+            display: block;
+            margin: 0 auto;
             transition: transform 0.3s;
         }
 
@@ -200,23 +201,8 @@
             transform: translateY(-2px);
         }
 
-        .submit-btn1 {
-            background: linear-gradient(90deg, #ffa500, #ffb84d);
-            color: #1a1a1a;
-            padding: 15px 40px;
-            border: none;
-            border-radius: 25px;
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-            justify-self: center;
-            align-items: center;
-            transition: transform 0.3s;
-        }
-
-        .submit-btn1:hover {
-            transform: translateY(-2px);
-        }
+       
+      
         /* Table Section */
         .table-section {
             padding: 40px 20px;
@@ -265,7 +251,7 @@
         }
 
         .data-table .footer-row td {
-            background: linear-gradient(90deg, #ffa500, #ffb84d);
+            background-color: #FCAF02;
             color: #1a1a1a;
             font-weight: 600;
             border: 1px solid black;
